--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build APK
+name: Android Build
 
 on:
   push:
@@ -10,23 +10,48 @@ on:
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
+    env:
+      JAVA_HOME: /usr/lib/jvm/java-11-openjdk-amd64
+
     steps:
-    - name: Check out the code
-      uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v3
 
     - name: Set up JDK
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v3
       with:
-        java-version: '11' # 或其他你需要的版本
         distribution: 'adopt'
+        java-version: '11'
 
-    - name: Build with Gradle
-      run: ./gradlew assembleDebug # 或使用 assembleRelease 根据需要
+    - name: Cache Gradle packages
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.gradle/caches
+          ~/.gradle/wrapper/
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+        restore-keys: ${{ runner.os }}-gradle
+
+    - name: Set up Android SDK
+      uses: android-actions/setup-android@v2
+      with:
+        api-level: 33
+        build-tools: 33.0.0
+
+    - name: Accept licenses
+      run: yes | sdkmanager --licenses
+
+    - name: Download Dependencies
+      run: ./gradlew build --no-daemon
+
+    - name: Build Debug APK
+      run: ./gradlew assembleDebug
 
     - name: Upload APK
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
-        name: my-app-apk
-        path: app/build/outputs/apk/debug/app-debug.apk # 根据你的项目结构调整路径
+        name: app-debug.apk
+        path: app/build/outputs/apk/debug/app-debug.apk
